crates/ars-core/tests/ui/has_id_private_id.rs
use ars_core::HasId;

#[derive(HasId)]
struct Props {
    id: String,
}

fn main() {}
